[gd_scene load_steps=8 format=3 uid="uid://uc1b4mri88y4"]

[ext_resource type="Script" path="res://Scripts/UI/GameUIInput.gd" id="1_ugbk3"]
[ext_resource type="Texture2D" uid="uid://cstfx8xbjy1ce" path="res://Sprites/SpriteAtlas/LeftInputButton.tres" id="2_qcab3"]
[ext_resource type="Texture2D" uid="uid://c34dsctgexd4o" path="res://Sprites/SpriteAtlas/LeftPressedInputButton.tres" id="3_eikkm"]
[ext_resource type="Texture2D" uid="uid://l0gsbd8ud23h" path="res://Sprites/SpriteAtlas/RightInputButton.tres" id="4_rt6jr"]
[ext_resource type="Texture2D" uid="uid://cfmbpss6ruwv" path="res://Sprites/SpriteAtlas/RightPressedInputButton.tres" id="5_d00bu"]
[ext_resource type="Texture2D" uid="uid://b5ki4c688fvaf" path="res://Sprites/SpriteAtlas/JumpInputButton.tres" id="6_xgaoa"]
[ext_resource type="Texture2D" uid="uid://clq3kkw0fbt6s" path="res://Sprites/SpriteAtlas/JumpPressedInputButton.tres" id="7_8il7a"]

[node name="GameUIInput" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ugbk3")

[node name="BottomLeftContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = -31.0
offset_right = 66.0
offset_bottom = -12.0
grow_vertical = 0

[node name="LeftInputButton" type="TouchScreenButton" parent="BottomLeftContainer"]
unique_name_in_owner = true
scale = Vector2(1.5, 1.5)
texture_normal = ExtResource("2_qcab3")
texture_pressed = ExtResource("3_eikkm")

[node name="RightInputButton" type="TouchScreenButton" parent="BottomLeftContainer"]
unique_name_in_owner = true
position = Vector2(26, 0)
scale = Vector2(1.5, 1.5)
texture_normal = ExtResource("4_rt6jr")
texture_pressed = ExtResource("5_d00bu")

[node name="BottomRightContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -47.0
offset_top = -31.0
offset_right = -24.0
offset_bottom = -12.0
grow_horizontal = 0
grow_vertical = 0

[node name="JumpInputButton" type="TouchScreenButton" parent="BottomRightContainer"]
unique_name_in_owner = true
scale = Vector2(1.5, 1.5)
texture_normal = ExtResource("6_xgaoa")
texture_pressed = ExtResource("7_8il7a")
